# blog-app/src/main/java/com/kiki/blog/app/controller/CommentController.java
@@ -1,29 +1,33 @@
 package com.kiki.blog.app.controller;
 
+import com.kiki.blog.app.service.CommentService;
+import com.kiki.blog.app.service.UserService;
 import com.kiki.blog.openapi.api.CommentApi;
 import com.kiki.blog.openapi.model.Comment;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
 
-import javax.validation.Valid;
-
+@RestController
 public class CommentController implements CommentApi {
-    @Override
-    public ResponseEntity<Void> deleteComment(String commentId) {
-        return null;
+
+    private UserService userService;
+    private CommentService commentService;
+
+    @Autowired
+    public CommentController(UserService userService, CommentService commentService) {
+        this.userService = userService;
+        this.commentService = commentService;
     }
 
     @Override
-    public ResponseEntity<Comment> getComment(String commentId) {
-        return null;
+    public ResponseEntity<Comment> getComment(String commentId) throws Exception {
+        return new ResponseEntity<>(commentService.getComment(commentId), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Integer> getCommentNumLikes(String commentId) {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<Comment> updateComment(String commentId, @Valid Comment comment) {
-        return null;
+    public ResponseEntity<Integer> getCommentNumLikes(String commentId) throws Exception {
+        return new ResponseEntity<>(commentService.getCommentLikes(commentId), HttpStatus.OK);
     }
 }
