# blog-app/src/main/java/com/kiki/blog/app/controller/UserController.java
@@ -1,8 +1,10 @@
 package com.kiki.blog.app.controller;
 
+import com.kiki.blog.app.service.CommentService;
 import com.kiki.blog.app.service.PostService;
 import com.kiki.blog.app.service.UserService;
 import com.kiki.blog.openapi.api.UserApi;
+import com.kiki.blog.openapi.model.Comment;
 import com.kiki.blog.openapi.model.CreateUser;
 import com.kiki.blog.openapi.model.Post;
 import com.kiki.blog.openapi.model.User;
@@ -19,11 +21,13 @@ public class UserController implements UserApi {
 
     private final UserService userService;
     private final PostService postService;
+    private final CommentService commentService;
 
     @Autowired
-    public UserController(UserService userService, PostService postService) {
+    public UserController(UserService userService, PostService postService, CommentService commentService) {
         this.userService = userService;
         this.postService = postService;
+        this.commentService = commentService;
     }
 
     @Override
@@ -32,9 +36,9 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<Post> createUserPost(String userId, @Valid Post post) throws Exception {
+    public ResponseEntity<User> updateUser(String userId, @Valid CreateUser createUser) throws Exception {
         userService.validateUserContext(userId);
-        return new ResponseEntity<>(postService.createPost(userId, post), HttpStatus.CREATED);
+        return new ResponseEntity<>(userService.updateUser(userId, createUser), HttpStatus.OK);
     }
 
     @Override
@@ -45,6 +49,16 @@ public class UserController implements UserApi {
     }
 
     @Override
+    public ResponseEntity<User> getUser(String userId) throws Exception {
+        return new ResponseEntity<>(userService.getUser(userId), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<User>> getAllUsers() throws Exception {
+        return new ResponseEntity<>(userService.getAllUsers(), HttpStatus.OK);
+    }
+
+    @Override
     public ResponseEntity<Void> followUser(String userId, String followId) throws Exception {
         userService.validateUserContext(userId);
         userService.followUser(userId, followId);
@@ -52,8 +66,10 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<List<User>> getAllUsers() throws Exception {
-        return new ResponseEntity<>(userService.getAllUsers(), HttpStatus.OK);
+    public ResponseEntity<Void> unfollowUser(String userId, String followId) throws Exception {
+        userService.validateUserContext(userId);
+        userService.unfollowUser(userId, followId);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
@@ -69,46 +85,74 @@ public class UserController implements UserApi {
     }
 
     @Override
-    public ResponseEntity<User> getUser(String userId) throws Exception {
-        return new ResponseEntity<>(userService.getUser(userId), HttpStatus.OK);
+    public ResponseEntity<Post> createPost(String userId, @Valid Post post) throws Exception {
+        userService.validateUserContext(userId);
+        return new ResponseEntity<>(postService.createPost(userId, post), HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<List<Post>> getUserPosts(String userId) throws Exception {
+    public ResponseEntity<Post> updatePost(String userId, String postId, @Valid Post post) throws Exception {
+        userService.validateUserContext(userId);
+        return new ResponseEntity<>(postService.updatePost(userId, postId, post), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> deletePost(String userId, String postId) throws Exception {
+        userService.validateUserContext(userId);
+        postService.deletePost(userId, postId);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<List<Post>> getPosts(String userId) throws Exception {
         userService.validateUserContext(userId);
         return new ResponseEntity<>(postService.getPosts(userId), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> likeComment(String userId, String commentId) throws Exception {
-        return null;
+    public ResponseEntity<Comment> postComment(String userId, String postId, @Valid Comment comment) throws Exception {
+        userService.validateUserContext(userId);
+        return new ResponseEntity<>(commentService.postComment(userId, postId, comment), HttpStatus.CREATED);
+    }
+
+    @Override
+    public ResponseEntity<Comment> updateComment(String userId, String commentId, @Valid Comment comment) throws Exception {
+        userService.validateUserContext(userId);
+        return new ResponseEntity<>(commentService.updateComment(userId, commentId, comment), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> deleteComment(String userId, String commentId) throws Exception {
+        userService.validateUserContext(userId);
+        commentService.deleteComment(userId, commentId);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<Void> likePost(String userId, String postId) throws Exception {
-        return null;
+        userService.validateUserContext(userId);
+        userService.likePost(userId, postId);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<Void> unfollowUser(String userId, String followId) throws Exception {
+    public ResponseEntity<Void> unlikePost(String userId, String postId) throws Exception {
         userService.validateUserContext(userId);
-        userService.unfollowUser(userId, followId);
+        userService.unlikePost(userId, postId);
+        return new ResponseEntity<>(HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Void> likeComment(String userId, String commentId) throws Exception {
+        userService.validateUserContext(userId);
+        userService.likeComment(userId, commentId);
         return new ResponseEntity<>(HttpStatus.OK);
     }
 
     @Override
     public ResponseEntity<Void> unlikeComment(String userId, String commentId) throws Exception {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<Void> unlikePost(String userId, String postId) throws Exception {
-        return null;
-    }
-
-    @Override
-    public ResponseEntity<User> updateUser(String userId, @Valid CreateUser createUser) throws Exception {
         userService.validateUserContext(userId);
-        return new ResponseEntity<>(userService.updateUser(userId, createUser), HttpStatus.OK);
+        userService.unlikeComment(userId, commentId);
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 }
